# sgi2025-project

./: CMakeLists.txt  README.md
cmake/: libigl.cmake  polyscope.cmake  stb.cmake  tinyad.cmake
remesh/: CMakeLists.txt  tmp.cc
remesh/src/: Inertia_Energy.cpp  split_edges.cpp
src/: Inertia_Energy.cpp  botschRemesher.cpp  botschRemesher.h  indicatorFunctions.cpp  indicatorFunctions.h  main.cpp  main_mass_spring.cpp.tmp  mass_spring.cpp  mass_spring.h.tmp  mesh.cpp  mesh.h  param.h  texture.h  utils.h  vertexSelector.cpp  vertexSelector.h
